--- a/style.css
+++ b/style.css
@@ -38,11 +38,50 @@ nav{
 #s1{
     height: 100vh;
     padding-top: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.left{
+    width: 400px;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    border: 2px solid black;
+    border-radius: 999px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.541);
+}
+
+.left img{
+    width: 400px;
+    height: auto;
+    transition: all 200ms ease-in-out;
+}
+
+.left img:hover{
+    transform: scale(1.2);
+}
+
+.right{
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
 }
 
 #s2{
     height: 100vh;
-    padding-top: 80px;
+    background-image: url('./wolf.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 #s3{
